Fixes #6680 -- Update border color on light theme to have contrast ratio over 3:1.

--- a/frontend/src/scss/_variables.scss
+++ b/frontend/src/scss/_variables.scss
@@ -22,6 +22,8 @@ $navbar-dark-color: #FFF;
 $navbar-light-brand-hover-color: $navbar-light-color;
 $navbar-dark-brand-hover-color: $navbar-dark-color;
 
+$border-color: #8E939F;
+
 $list-group-item-padding-y: 1rem;
 
 $dropdown-item-padding-y: .75rem;
